--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 - name: Pilot Study
-  link: /pilot/
+  link: /studies/pilot/
 - name: Replication
-  link: /replication/
+  link: /studies/replication/
 - name: Study 1
-  link: /study1/
+  link: /studies/study1/
 - name: Study 2
-  link: /study2/
+  link: /studies/study2/
 - name: Study 3
-  link: /study3/
+  link: /studies/study3/
