--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: chrisrhymes/bulma-clean-theme
 fixed_navbar: top
-favicon: favicon.ico
+favicon: /assets/images/favicon.png
 title: Brad Kennedy - PhD Github
