--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,7 @@
   link: /studies/study2/
 - name: Study 3
   link: /studies/study3/
+- name: Study 4
+  link: /studies/study4/
+- name: Study 5
+  link: /studies/study5/
