--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,3 +15,6 @@
       link: /studies/study4/
     - name: Study 5
       link: /studies/study5/
+    - name: Posters
+      link: /studies/posters/
+      
