--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,5 +16,5 @@
     - name: Study 5
       link: /studies/study5/
     - name: Posters
-      link: /studies/posters/
+      link: /posters/
       
