add new posters

--- a/_data/posters.yml
+++ b/_data/posters.yml
@@ -4,6 +4,20 @@
       large_link: https://bradkennedy-phd.github.io/posters/PGRSymposium22/PGRSymp22-Poster.pdf
       alt: Academic Poster
       description: |-
-        University of Chester PGR Symposium 2022.  
+        Postgraduate Research (PGR) Symposium, University of Chester. 2022  
         [Click to open PDF](https://bradkennedy-phd.github.io/posters/PGRSymposium22/PGRSymp22-Poster.pdf)
+      ratio: is-3by4
+    - link: https://bradkennedy-phd.github.io/posters/EPS22/EPS2022_Poster_Kennedy.png
+      large_link: https://bradkennedy-phd.github.io/posters/EPS22/EPS2022_Poster_Kennedy.pdf
+      alt: Academic Poster
+      description: |-
+        Experimental Psychology Society Conference, Virtual. 2022  
+        [Click to open PDF](https://bradkennedy-phd.github.io/posters/EPS22/EPS2022_Poster_Kennedy.pdf)
+      ratio: is-5by4
+    - link: https://bradkennedy-phd.github.io/posters/PsyPag18/PsyPag2018_Poster_Kennedy.png
+      large_link: https://bradkennedy-phd.github.io/posters/PsyPag18/PsyPag2018_Poster_Kennedy.pdf
+      alt: Academic Poster
+      description: |-
+        Psychology Postgraduate Affairs Group (PsyPag) Conference, Huddersfield. 2018
+        [Click to open PDF](https://bradkennedy-phd.github.io/posters/PsyPag18/PsyPag2018_Poster_Kennedy.pdf)
       ratio: is-3by4
