test remove title

--- a/_data/posters.yml
+++ b/_data/posters.yml
@@ -1,4 +1,4 @@
-- title: Posters
+- title: 
   images:
     - link: https://bradkennedy-phd.github.io/posters/PGRSymposium22/PGRSymp22-Poster.png
       large_link: https://bradkennedy-phd.github.io/posters/PGRSymposium22/PGRSymp22-Poster.pdf
