update study pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@
       link: /studies/study2/
     - name: Study 3 - Power
       link: /studies/study3/
-    - name: Study 4
+    - name: Study 4 - Environment
       link: /studies/study4/
 - name: Posters
   link: /posters/
