--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: chrisrhymes/bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme@v1.0.0
 fixed_navbar: top
 favicon: /assets/images/favicon.png
 title: Brad Kennedy - PhD Github
