typos and nav update

--- a/_data/callouts.yml
+++ b/_data/callouts.yml
@@ -2,7 +2,7 @@ style: is-light
 height: is-small
 items:
   - title: Mailing Lists
-    subtitle: Future stuides and/or results
+    subtitle: Future studies and/or results
     icon: fa-envelope
     description: >
       If you'd like to hear about any future research or if you'd like to
