update replication name

--- a/_data/main_menu.yml
+++ b/_data/main_menu.yml
@@ -7,7 +7,7 @@
       items:
         - name: Material Development Study
           link: /studies/matdev/
-        - name: Knobe (2003) Replication
+        - name: Study 1 - Knobe (2003) Replication
           link: /studies/replication/
         - name: Study 2 - Job Status
           link: /studies/study2job/
